youtube-dl only

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -21,5 +21,11 @@ jobs:
           pip install pylint
           pylint musicbot tests
       - name: Test with pytest
+        env:
+          MB_SPOTIFY_CACHE: ${{ secrets.MB_SPOTIFY_CACHE }}
+          MB_SPOTIFY_USERNAME: ${{ secrets.MB_SPOTIFY_USERNAME }}
+          MB_SPOTIFY_CLIENT_ID: ${{ secrets.MB_SPOTIFY_CLIENT_ID }}
+          MB_SPOTIFY_CLIENT_SECRET: ${{ secrets.MB_SPOTIFY_CLIENT_SECRET }}
         run: |
+          echo "$env:MB_SPOTIFY_CACHE" > .spotify_cache
           pytest
