--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,6 @@ prompt_toolkit = "^3.0.2"
 watchdog = "^0.10.0"
 mps-youtube = "^0.2.8"
 youtube-dl = "^2020.1.24"
-pytube3 = "^9.6.4"
 spotipy = "^2.10.0"
 click-man = "^0.4.1"
 humanfriendly = "^8.1"
@@ -52,7 +51,9 @@ pylint = "^2.3"
 pytest-docker-compose = "^3.1.2"
 html5lib = "^1.0.1"
 dephell = "^0.8.1"
-rstcheck = "^3.3.1"
+restructuredtext_lint = "^1.3.0"
+Pygments = "^2.6.1"
+pytest-testmon = "^1.0.2"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
