--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -77,6 +77,7 @@ py==1.8.1
 pyacoustid==1.1.7
 pycparser==2.20
 pydub==0.23.1
+pygments==2.6.1
 pylint==2.4.4
 pynacl==1.3.0
 pyparsing==2.4.7
@@ -88,26 +89,25 @@ pytest==5.4.1
 pytest-click==0.3
 pytest-cov==2.8.1
 pytest-docker-compose==3.1.2
+pytest-testmon==1.0.2
 python-dotenv==0.12.0
 python-slugify==4.0.0
 python-vlc==3.0.7110
-pytube3==9.6.4
 pywin32==227; sys_platform == "win32" and python_version >= "3.6"
 pyyaml==5.3.1
 requests==2.23.0
-rstcheck==3.3.1
+restructuredtext-lint==1.3.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
 six==1.14.0
-spotipy==2.10.0
+spotipy==2.11.1
 text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.0
 tomlkit==0.5.11
 tqdm==4.45.0
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
-typing-extensions==3.7.4.2
 urllib3==1.25.8
 watchdog==0.10.2
 wcwidth==0.1.9
