--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,5 +27,5 @@ jobs:
           MB_SPOTIFY_CLIENT_ID: ${{ secrets.MB_SPOTIFY_CLIENT_ID }}
           MB_SPOTIFY_CLIENT_SECRET: ${{ secrets.MB_SPOTIFY_CLIENT_SECRET }}
         run: |
-          echo -n "$MB_SPOTIFY_CACHE" > .spotify_cache
-          pytest
+          echo -n "$MB_SPOTIFY_CACHE" > $HOME/.spotify_cache
+          MB_SPOTIFY_CACHE_PATH=$HOME/.spotify_cache pytest
