--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,7 +18,7 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Linting
         run: |
-          pip install pylint rst-lint
+          pip install pylint restructuredtext_lint
           pylint musicbot tests
           rst-lint README.rst
       - name: Test with pytest
