--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libtag1-dev postgresql-server-dev-all ffmpeg
+          sudo apt-get install -y libtag1-dev postgresql-server-dev-all ffmpeg libvlc
           pip install -r requirements-dev.txt
       - name: Linting
         run: |
