--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dephell = "^0.8.1"
 restructuredtext_lint = "^1.3.0"
 Pygments = "^2.6.1"
 pytest-testmon = "^1.0.2"
+bump2version = "^1.0.0"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
