--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
 bcrypt==3.1.7
+bump2version==1.0.0
 cached-property==1.5.1
 cerberus==1.3.2
 certifi==2020.4.5.1
@@ -105,7 +106,7 @@ spotipy==2.11.1
 text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.0
-tomlkit==0.5.11
+tomlkit==0.6.0
 tqdm==4.45.0
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
 urllib3==1.25.8
