fixed accounts list

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,26 @@ services:
       - db
     environment:
       DEBUG: postgraphile:postgres:notice
-    command: ["postgraphile", "--retry-on-init-fail", "--cors", "--no-setof-functions-contain-nulls", "--no-ignore-rbac", "--no-ignore-indexes", "--dynamic-json", "--connection", $DATABASE_URL, "--host", "0.0.0.0", "--port", "5000", "--schema", "musicbot_public", "--default-role", "musicbot_anonymous", "--enhance-graphiql", "--allow-explain", "--jwt-token-identifier", "musicbot_public.jwt_token", "--jwt-secret", $MUSICBOT_SECRET, "-l", "10MB", "--simple-collections", "both", "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"]
+    command: [
+      "--retry-on-init-fail",
+      "--cors",
+      "--no-setof-functions-contain-nulls",
+      "--no-ignore-rbac",
+      "--no-ignore-indexes",
+      "--dynamic-json",
+      "--connection", $DATABASE_URL,
+      "--host", "0.0.0.0",
+      "--port", "5000",
+      "--schema", "musicbot_public",
+      "--default-role", "musicbot_anonymous",
+      "--enhance-graphiql",
+      "--allow-explain",
+      "--jwt-token-identifier", "musicbot_public.jwt_token",
+      "--jwt-secret", $MUSICBOT_SECRET,
+      "--body-size-limit", "10MB",
+      "--simple-collections", "both",
+      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"
+    ]
 
   # private API
   postgraphile_private:
@@ -45,4 +64,20 @@ services:
       - 5001:5001
     environment:
       DEBUG: postgraphile:postgres:notice
-    command: ["postgraphile", "--retry-on-init-fail", "--cors", "--include-extension-resources", "--no-setof-functions-contain-nulls", "--no-ignore-indexes", "--dynamic-json", "--connection", $DATABASE_URL, "--host", "0.0.0.0", "--port", "5001", "--schema", "musicbot_public,musicbot_private", "--default-role", "postgres", "--enhance-graphiql", "--allow-explain", "--simple-collections", "both", "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"]
+    command: [
+      "--retry-on-init-fail",
+      "--cors",
+      "--include-extension-resources",
+      "--no-setof-functions-contain-nulls",
+      "--no-ignore-indexes",
+      "--dynamic-json",
+      "--connection", $DATABASE_URL,
+      "--host", "0.0.0.0",
+      "--port", "5001",
+      "--schema", "musicbot_public,musicbot_private",
+      "--default-role", "postgres",
+      "--enhance-graphiql",
+      "--allow-explain",
+      "--simple-collections", "both",
+      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"
+    ]
