replaced pytaglib by mutagen

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ click-didyoumean = "^0.0.3"
 click-spinner = "^0.1.8"
 attrdict = "^2.0"
 attrs = "^19.1"
-pytaglib = "^1.4"
 tqdm = "^4.31"
 isodate = "^0.6.0"
 logging-tree = "^1.8"
@@ -42,6 +41,7 @@ coloredlogs = "^14.0"
 python-slugify = "^4.0.0"
 click-completion = "^0.5.2"
 cached-property = "^1.5.1"
+mutagen = "^1.44.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
