--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,7 +12,7 @@ cerberus==1.3.2
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 click-aliases==1.0.1
 click-completion==0.5.2
 click-didyoumean==0.0.3
@@ -23,7 +23,7 @@ coloredlogs==14.0
 coverage==5.1
 coverage-badge==1.0.1
 cryptography==2.9.2
-dephell==0.8.2
+dephell==0.8.3
 dephell-archive==0.1.6
 dephell-argparse==0.1.2
 dephell-changelogs==0.0.1
@@ -34,7 +34,7 @@ dephell-markers==1.0.3
 dephell-pythons==0.1.14
 dephell-setuptools==0.2.3
 dephell-shells==0.1.4
-dephell-specifier==0.2.1
+dephell-specifier==0.2.2
 dephell-venvs==0.1.17
 dephell-versioning==0.1.1
 docker==4.2.0
@@ -63,6 +63,7 @@ mistune==0.8.4
 more-itertools==8.2.0
 mps-youtube==0.2.8
 multidict==4.7.5
+mutagen==1.44.0
 packaging==20.3
 pafy==0.5.5
 paramiko==2.7.1
@@ -85,7 +86,6 @@ pyparsing==2.4.7
 pypiwin32==223; sys_platform == "win32" and python_version >= "3.6"
 pyreadline==2.1; sys_platform == "win32"
 pyrsistent==0.16.0
-pytaglib==1.4.6
 pytest==5.4.1
 pytest-click==0.3
 pytest-cov==2.8.1
