--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ python-slugify = "^4.0.0"
 click-completion = "^0.5.2"
 cached-property = "^1.5.1"
 mutagen = "^1.44.0"
+colorama = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
