--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -18,7 +18,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-man==0.4.1
 click-spinner==0.1.10
-colorama==0.4.3; sys_platform == "win32"
+colorama==0.4.3
 coloredlogs==14.0
 coverage==5.1
 coverage-badge==1.0.1
