--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ youtube-dl = "^2020.1.24"
 spotipy = "^2.10.0"
 click-man = "^0.4.1"
 humanfriendly = "^8.1"
-coloredlogs = "^14.0"
 python-slugify = "^4.0.0"
 click-completion = "^0.5.2"
 cached-property = "^1.5.1"
@@ -43,9 +42,9 @@ mutagen = "^1.44.0"
 colorama = "^0.4.3"
 pydub = "^0.24.0"
 python-dotenv = "^0.13.0"
+colorlog = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2.4"
 pytest-cov = "^2.6"
 pytest-click = "^0.3.0"
 coverage-badge = "^1.0"
@@ -55,8 +54,8 @@ html5lib = "^1.0.1"
 dephell = "^0.8.1"
 restructuredtext_lint = "^1.3.0"
 Pygments = "^2.6.1"
-pytest-testmon = "^1.0.2"
 bump2version = "^1.0.0"
+pytest = "^6.0.1"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
