--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 aiohttp==3.6.2
-astroid==2.4.1
+astroid==2.4.2
 async-timeout==3.0.1
 atomicwrites==1.4.0; sys_platform == "win32"
 attrdict==2.0.1
@@ -9,8 +9,8 @@ bcrypt==3.1.7
 bump2version==1.0.0
 cached-property==1.5.1
 cerberus==1.3.2
-certifi==2020.4.5.1
-cffi==1.14.0
+certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
 click==7.1.2
 click-aliases==1.0.1
@@ -19,36 +19,37 @@ click-didyoumean==0.0.3
 click-man==0.4.1
 click-spinner==0.1.10
 colorama==0.4.3
-coloredlogs==14.0
-coverage==5.1
+colorlog==4.2.1
+coverage==5.2.1
 coverage-badge==1.0.1
-cryptography==2.9.2
+cryptography==3.0
 dephell==0.8.3
-dephell-archive==0.1.6
-dephell-argparse==0.1.2
+dephell-archive==0.1.7
+dephell-argparse==0.1.3
 dephell-changelogs==0.0.1
 dephell-discover==0.2.10
 dephell-licenses==0.1.7
 dephell-links==0.1.5
 dephell-markers==1.0.3
-dephell-pythons==0.1.14
-dephell-setuptools==0.2.3
-dephell-shells==0.1.4
+dephell-pythons==0.1.15
+dephell-setuptools==0.2.4
+dephell-shells==0.1.5
 dephell-specifier==0.2.2
 dephell-venvs==0.1.17
-dephell-versioning==0.1.1
-docker==4.2.0
-docker-compose==1.25.5
+dephell-versioning==0.1.2
+distro==1.5.0
+docker==4.2.2
+docker-compose==1.26.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
 feedparser==5.2.1
 flask==1.1.2
 graphql-py==0.7.1
-html5lib==1.0.1
+html5lib==1.1
 humanfriendly==8.2
-idna==2.9
-importlib-metadata==1.6.0; python_version < "3.8"
+idna==2.10
+importlib-metadata==1.7.0; python_version < "3.8"
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -60,10 +61,10 @@ m2r==0.2.1
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
-more-itertools==8.3.0
+more-itertools==8.4.0
 mps-youtube==0.2.8
 multidict==4.7.6
-mutagen==1.44.0
+mutagen==1.45.0
 packaging==20.4
 pafy==0.5.5
 paramiko==2.7.1
@@ -75,48 +76,49 @@ prettytable==0.7.2
 prompt-toolkit==3.0.5
 psycopg2-binary==2.8.5
 ptyprocess==0.6.0
-py==1.8.1
+py==1.9.0
 pyacoustid==1.2.0
 pycparser==2.20
-pydub==0.24.0
+pydub==0.24.1
 pygments==2.6.1
-pylint==2.5.2
-pynacl==1.3.0
+pylint==2.5.3
+pynacl==1.4.0
 pyparsing==2.4.7
 pypiwin32==223; sys_platform == "win32" and python_version >= "3.6"
 pyreadline==2.1; sys_platform == "win32"
 pyrsistent==0.16.0
-pytest==5.4.2
+pytest==5.4.3
 pytest-click==0.3
-pytest-cov==2.8.1
+pytest-cov==2.10.0
 pytest-docker-compose==3.1.2
 pytest-testmon==1.0.2
 python-dotenv==0.13.0
-python-slugify==4.0.0
-python-vlc==3.0.9113
-pywin32==227; sys_platform == "win32" and python_version >= "3.6"
+python-slugify==4.0.1
+python-vlc==3.0.11115
+pywin32==228; sys_platform == "win32" and python_version >= "3.6"
 pyyaml==5.3.1
-requests==2.23.0
-restructuredtext-lint==1.3.0
+requests==2.24.0
+restructuredtext-lint==1.3.1
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
-six==1.14.0
-spotipy==2.12.0
+six==1.15.0
+spotipy==2.13.0
 text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.1
 tomlkit==0.6.0
-tqdm==4.46.0
+tqdm==4.48.0
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
-urllib3==1.25.9
-watchdog==0.10.2
-wcwidth==0.1.9
+typing-extensions==3.7.4.2
+urllib3==1.25.10
+watchdog==0.10.3
+wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==0.57.0
 werkzeug==1.0.1
 wrapt==1.12.1
-yarl==1.4.2
-yaspin==0.17.0
-youtube-dl==2020.5.8
+yarl==1.5.0
+yaspin==0.18.0
+youtube-dl==2020.7.28
 zipp==3.1.0; python_version < "3.8"
