--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
 cached-property==1.5.1
-certifi==2020.4.5.1
+certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 click-aliases==1.0.1
@@ -11,12 +11,12 @@ click-didyoumean==0.0.3
 click-man==0.4.1
 click-spinner==0.1.10
 colorama==0.4.3
-coloredlogs==14.0
+colorlog==4.2.1
 feedparser==5.2.1
 flask==1.1.2
 graphql-py==0.7.1
 humanfriendly==8.2
-idna==2.9
+idna==2.10
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -24,7 +24,7 @@ jinja2==2.11.2
 logging-tree==1.8.1
 markupsafe==1.1.1
 mps-youtube==0.2.8
-mutagen==1.44.0
+mutagen==1.45.0
 pafy==0.5.5
 pathtools==0.1.2
 ply==3.11
@@ -32,20 +32,20 @@ prettytable==0.7.2
 prompt-toolkit==3.0.5
 psycopg2-binary==2.8.5
 pyacoustid==1.2.0
-pydub==0.24.0
+pydub==0.24.1
 pyreadline==2.1; sys_platform == "win32"
 python-dotenv==0.13.0
-python-slugify==4.0.0
-python-vlc==3.0.9113
-requests==2.23.0
+python-slugify==4.0.1
+python-vlc==3.0.11115
+requests==2.24.0
 shellingham==1.3.2
-six==1.14.0
-spotipy==2.12.0
+six==1.15.0
+spotipy==2.13.0
 text-unidecode==1.3
 toml==0.10.1
-tqdm==4.46.0
-urllib3==1.25.9
-watchdog==0.10.2
-wcwidth==0.1.9
+tqdm==4.48.0
+urllib3==1.25.10
+watchdog==0.10.3
+wcwidth==0.2.5
 werkzeug==1.0.1
-youtube-dl==2020.5.8
+youtube-dl==2020.7.28
