--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -50,6 +50,7 @@ html5lib==1.1
 humanfriendly==8.2
 idna==2.10
 importlib-metadata==1.7.0; python_version < "3.8"
+iniconfig==1.0.1
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -64,7 +65,7 @@ mistune==0.8.4
 more-itertools==8.4.0
 mps-youtube==0.2.8
 multidict==4.7.6
-mutagen==1.45.0
+mutagen==1.45.1
 packaging==20.4
 pafy==0.5.5
 paramiko==2.7.1
@@ -87,11 +88,10 @@ pyparsing==2.4.7
 pypiwin32==223; sys_platform == "win32" and python_version >= "3.6"
 pyreadline==2.1; sys_platform == "win32"
 pyrsistent==0.16.0
-pytest==5.4.3
+pytest==6.0.1
 pytest-click==0.3
 pytest-cov==2.10.0
 pytest-docker-compose==3.1.2
-pytest-testmon==1.0.2
 python-dotenv==0.13.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
@@ -107,10 +107,10 @@ spotipy==2.13.0
 text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.1
-tomlkit==0.6.0
-tqdm==4.48.0
+tomlkit==0.7.0
+tqdm==4.48.2
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
-typing-extensions==3.7.4.2
+typing-extensions==3.7.4.2; python_version < "3.8"
 urllib3==1.25.10
 watchdog==0.10.3
 wcwidth==0.2.5
@@ -118,7 +118,7 @@ webencodings==0.5.1
 websocket-client==0.57.0
 werkzeug==1.0.1
 wrapt==1.12.1
-yarl==1.5.0
-yaspin==0.18.0
+yarl==1.5.1
+yaspin==1.0.0
 youtube-dl==2020.7.28
 zipp==3.1.0; python_version < "3.8"
