--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,8 @@ python = "^3.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
 click = "^7.0"
 click-didyoumean = "^0.0.3"
-click-spinner = "^0.1.8"
 attrdict = "^2.0"
 attrs = "^19.1"
-tqdm = "^4.31"
 isodate = "^0.6.0"
 logging-tree = "^1.8"
 psycopg2-binary = "^2.8"
@@ -43,6 +41,7 @@ colorama = "^0.4.3"
 pydub = "^0.24.0"
 python-dotenv = "^0.13.0"
 colorlog = "^4.1.0"
+enlighten = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
