--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.2
+ansicon==1.89.0; platform_system == "Windows"
 astroid==2.4.2
 async-timeout==3.0.1
 atomicwrites==1.4.0; sys_platform == "win32"
@@ -6,6 +7,7 @@ attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
 bcrypt==3.1.7
+blessed==1.17.9
 bump2version==1.0.0
 cached-property==1.5.1
 cerberus==1.3.2
@@ -17,7 +19,6 @@ click-aliases==1.0.1
 click-completion==0.5.2
 click-didyoumean==0.0.3
 click-man==0.4.1
-click-spinner==0.1.10
 colorama==0.4.3
 colorlog==4.2.1
 coverage==5.2.1
@@ -43,6 +44,7 @@ docker-compose==1.26.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
+enlighten==1.6.1
 feedparser==5.2.1
 flask==1.1.2
 graphql-py==0.7.1
@@ -55,6 +57,7 @@ isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
 jinja2==2.11.2
+jinxed==1.0.0; platform_system == "Windows"
 jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 logging-tree==1.8.1
@@ -74,7 +77,7 @@ pexpect==4.8.0
 pluggy==0.13.1
 ply==3.11
 prettytable==0.7.2
-prompt-toolkit==3.0.5
+prompt-toolkit==3.0.6
 psycopg2-binary==2.8.5
 ptyprocess==0.6.0
 py==1.9.0
@@ -108,7 +111,6 @@ text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.1
 tomlkit==0.7.0
-tqdm==4.48.2
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
 typing-extensions==3.7.4.2; python_version < "3.8"
 urllib3==1.25.10
