--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+ansicon==1.89.0; platform_system == "Windows"
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
+blessed==1.17.9
 cached-property==1.5.1
 certifi==2020.6.20
 chardet==3.0.4
@@ -9,9 +11,9 @@ click-aliases==1.0.1
 click-completion==0.5.2
 click-didyoumean==0.0.3
 click-man==0.4.1
-click-spinner==0.1.10
 colorama==0.4.3
 colorlog==4.2.1
+enlighten==1.6.1
 feedparser==5.2.1
 flask==1.1.2
 graphql-py==0.7.1
@@ -21,6 +23,7 @@ isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
 jinja2==2.11.2
+jinxed==1.0.0; platform_system == "Windows"
 logging-tree==1.8.1
 markupsafe==1.1.1
 mps-youtube==0.2.8
@@ -29,7 +32,7 @@ pafy==0.5.5
 pathtools==0.1.2
 ply==3.11
 prettytable==0.7.2
-prompt-toolkit==3.0.5
+prompt-toolkit==3.0.6
 psycopg2-binary==2.8.5
 pyacoustid==1.2.0
 pydub==0.24.1
@@ -43,7 +46,6 @@ six==1.15.0
 spotipy==2.13.0
 text-unidecode==1.3
 toml==0.10.1
-tqdm==4.48.2
 urllib3==1.25.10
 watchdog==0.10.3
 wcwidth==0.2.5
