--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,13 +6,13 @@ atomicwrites==1.4.0; sys_platform == "win32"
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
-bcrypt==3.1.7
+bcrypt==3.2.0
 blessed==1.17.9
 bump2version==1.0.0
 cached-property==1.5.1
 cerberus==1.3.2
 certifi==2020.6.20
-cffi==1.14.1
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
 click-aliases==1.0.1
@@ -39,7 +39,7 @@ dephell-specifier==0.2.2
 dephell-venvs==0.1.17
 dephell-versioning==0.1.2
 distro==1.5.0
-docker==4.2.2
+docker==4.3.0
 docker-compose==1.26.2
 dockerpty==0.4.1
 docopt==0.6.2
@@ -57,7 +57,7 @@ isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
 jinja2==2.11.2
-jinxed==1.0.0; platform_system == "Windows"
+jinxed==1.0.1; platform_system == "Windows"
 jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 logging-tree==1.8.1
@@ -88,17 +88,16 @@ pygments==2.6.1
 pylint==2.5.3
 pynacl==1.4.0
 pyparsing==2.4.7
-pypiwin32==223; sys_platform == "win32" and python_version >= "3.6"
 pyreadline==2.1; sys_platform == "win32"
 pyrsistent==0.16.0
 pytest==6.0.1
 pytest-click==0.3
-pytest-cov==2.10.0
+pytest-cov==2.10.1
 pytest-docker-compose==3.1.2
 python-dotenv==0.13.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
-pywin32==228; sys_platform == "win32" and python_version >= "3.6"
+pywin32==227; sys_platform == "win32"
 pyyaml==5.3.1
 requests==2.24.0
 restructuredtext-lint==1.3.1
