--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,8 +64,7 @@ addopts = "--cov-report term-missing --durations=0 --cov musicbot --docker-compo
 jobs = 4
 [tool.pylint.messages_control]
 disable = """
-line-too-long,too-many-arguments,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-few-public-methods,too-many-ancest
-ors,abstract-method,anomalous-backslash-in-string,broad-except,too-many-lines,import-outside-toplevel,logging-fstring-interpolation
+disable=too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-few-public-methods,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation
 """
 
 [tool.dephell.main]
