--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ click==7.1.2
 click-aliases==1.0.1
 click-completion==0.5.2
 click-didyoumean==0.0.3
+click-help-colors==0.8
 click-man==0.4.1
+click-option-group==0.5.1
 colorama==0.4.3
 colorlog==4.2.1
 enlighten==1.6.1
