--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,6 @@ musicbot = 'musicbot.cli:main'
 [tool.poetry.dependencies]
 python = "^3.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
-click = "^7.0"
-click-didyoumean = "^0.0.3"
 attrdict = "^2.0"
 isodate = "^0.6.0"
 logging-tree = "^1.8"
@@ -21,7 +19,6 @@ psycopg2-binary = "^2.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
 graphql-py = "^0.7.1"
-click_aliases = "^1.0.1"
 feedparser = "^5.2.1"
 flask = "^1.1.1"
 prettytable = "^0.7.2"
@@ -32,17 +29,14 @@ youtube-dl = "^2020.1.24"
 spotipy = "^2.10.0"
 humanfriendly = "^8.1"
 python-slugify = "^4.0.0"
-click-completion = "^0.5.2"
 cached-property = "^1.5.1"
 mutagen = "^1.44.0"
-colorama = "^0.4.3"
 pydub = "^0.24.0"
 python-dotenv = "^0.13.0"
 colorlog = "^4.1.0"
 enlighten = "^1.6.1"
-click-option-group = "^0.5.1"
-click-help-colors = "^0.8"
 attrs = "^20.1.0"
+click-skeleton = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
