--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ansicon==1.89.0; platform_system == "Windows"
 atomicwrites==1.4.0; sys_platform == "win32"
 attrdict==2.0.1
-attrs==20.1.0
+attrs==20.2.0
 audioread==2.1.8
 blessed==1.17.10
 cached-property==1.5.1
@@ -13,7 +13,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.2.2
+click-skeleton==0.2.3
 colorama==0.4.3
 colorlog==4.2.1
 enlighten==1.6.2
@@ -41,13 +41,14 @@ pluggy==0.13.1
 ply==3.11
 prettytable==0.7.2
 prompt-toolkit==3.0.7
-psycopg2-binary==2.8.5
+psycopg2-binary==2.8.6
 py==1.9.0
 pyacoustid==1.2.0
 pydub==0.24.1
 pyparsing==2.4.7
 pyreadline==2.1; sys_platform == "win32"
 pytest==6.0.1
+pytest-click==1.0.2
 python-dotenv==0.13.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
@@ -61,5 +62,5 @@ urllib3==1.25.10
 watchdog==0.10.3
 wcwidth==0.2.5
 werkzeug==1.0.1
-youtube-dl==2020.7.28
+youtube-dl==2020.9.6
 zipp==3.1.0; python_version < "3.8"
