--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,12 +20,13 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.2.3
+click-skeleton==0.2.6
 colorama==0.4.3
 colorlog==4.2.1
 coverage==5.2.1
 coverage-badge==1.0.1
 cryptography==3.1
+decorator==4.4.2
 dephell==0.8.3
 dephell-archive==0.1.7
 dephell-argparse==0.1.3
@@ -42,7 +43,7 @@ dephell-venvs==0.1.17
 dephell-versioning==0.1.2
 distro==1.5.0
 docker==4.3.1
-docker-compose==1.27.0
+docker-compose==1.27.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
@@ -53,6 +54,7 @@ graphql-py==0.7.1
 html5lib==1.1
 humanfriendly==8.2
 idna==2.10
+importlab==0.5.1
 importlib-metadata==1.7.0; python_version < "3.8"
 iniconfig==1.0.1
 isodate==0.6.0
@@ -71,6 +73,8 @@ more-itertools==8.5.0
 mps-youtube==0.2.8
 multidict==4.7.6
 mutagen==1.45.1
+networkx==2.5
+ninja==1.10.0.post2
 packaging==20.4
 pafy==0.5.5
 paramiko==2.7.2
@@ -91,14 +95,15 @@ pylint==2.6.0
 pynacl==1.4.0
 pyparsing==2.4.7
 pyreadline==2.1; sys_platform == "win32"
-pyrsistent==0.16.0
+pyrsistent==0.17.2
 pytest==6.0.1
 pytest-click==1.0.2
 pytest-cov==2.10.1
-pytest-docker-compose==3.1.3
+pytest-docker-compose==3.2.0
 python-dotenv==0.13.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
+pytype==2020.8.28
 pywin32==227; sys_platform == "win32"
 pyyaml==5.3.1
 requests==2.24.0
@@ -107,12 +112,12 @@ ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
 six==1.15.0
-spotipy==2.14.0
+spotipy==2.15.0
 text-unidecode==1.3
 texttable==1.6.3
 toml==0.10.1
 tomlkit==0.7.0
-typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
+typed-ast==1.4.1
 typing-extensions==3.7.4.3; python_version < "3.8"
 urllib3==1.25.10
 watchdog==0.10.3
