--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ enlighten = "^1.6.1"
 attrs = "^20.1.0"
 click-skeleton = "^0.2.6"
 requests = "^2.24.0"
+pydantic = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
