--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ prompt-toolkit==3.0.7
 psycopg2-binary==2.8.6
 py==1.9.0
 pyacoustid==1.2.0
+pydantic==1.6.1
 pydub==0.24.1
 pyparsing==2.4.7
 pyreadline==2.1; sys_platform == "win32"
