--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,47 +10,40 @@ readme = "README.rst"
 musicbot = 'musicbot.cli:main'
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.9"
-isort = {version = "^4.3",extras = ["pyproject"]}
+python = "<3.9,>=3.8"
+pyrsistent = "0.17.2"
 click-skeleton = ">=0.2.7"
 attrdict = "^2.0"
-isodate = "^0.6.0"
 logging-tree = "^1.8"
-psycopg2-binary = "^2.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
 graphql-py = "^0.7.1"
-feedparser = "^5.2.1"
-flask = "^1.1.1"
 prettytable = "^0.7.2"
 prompt_toolkit = "^3.0.2"
 watchdog = "^0.10.0"
-mps-youtube = "^0.2.8"
 youtube-dl = "^2020.1.24"
 spotipy = "^2.10.0"
 humanfriendly = "^8.1"
 python-slugify = "^4.0.0"
-cached-property = "^1.5.1"
 mutagen = "^1.44.0"
 pydub = "^0.24.0"
-python-dotenv = "^0.13.0"
 colorlog = "^4.1.0"
 enlighten = "^1.6.1"
 attrs = "^20.1.0"
 requests = "^2.24.0"
+jellyfish = "^0.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
 coverage-badge = "^1.0"
 pytest-docker-compose = "^3.1.2"
 html5lib = "^1.0.1"
-dephell = "^0.8.1"
+dephell = "^0.8.3"
 restructuredtext_lint = "^1.3.0"
-Pygments = "^2.6.1"
 bump2version = "^1.0.0"
-pytest = "^6.0.1"
 pylint = "^2.6.0"
 pytype = "^2020.8.28"
+Pygments = "^2.7.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
