--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,7 +23,7 @@ click-option-group==0.5.1
 click-skeleton==0.2.7
 colorama==0.4.3
 colorlog==4.2.1
-coverage==5.2.1
+coverage==5.3
 coverage-badge==1.0.1
 cryptography==3.1
 decorator==4.4.2
@@ -48,18 +48,14 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
 enlighten==1.6.2
-feedparser==5.2.1
-flask==1.1.2
 graphql-py==0.7.1
 html5lib==1.1
 humanfriendly==8.2
 idna==2.10
 importlab==0.5.1
-importlib-metadata==1.7.0; python_version < "3.8"
 iniconfig==1.0.1
-isodate==0.6.0
-isort==4.3.21
-itsdangerous==1.1.0
+isort==5.5.2
+jellyfish==0.8.2
 jinja2==2.11.2
 jinxed==1.0.1; platform_system == "Windows"
 jsonschema==3.2.0
@@ -70,13 +66,11 @@ markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
 more-itertools==8.5.0
-mps-youtube==0.2.8
 multidict==4.7.6
 mutagen==1.45.1
 networkx==2.5
 ninja==1.10.0.post2
 packaging==20.4
-pafy==0.5.5
 paramiko==2.7.2
 pathtools==0.1.2
 pexpect==4.8.0
@@ -84,13 +78,12 @@ pluggy==0.13.1
 ply==3.11
 prettytable==0.7.2
 prompt-toolkit==3.0.7
-psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 py==1.9.0
 pyacoustid==1.2.0
 pycparser==2.20
 pydub==0.24.1
-pygments==2.6.1
+pygments==2.7.0
 pylint==2.6.0
 pynacl==1.4.0
 pyparsing==2.4.7
@@ -100,7 +93,7 @@ pytest==6.0.2
 pytest-click==1.0.2
 pytest-cov==2.10.1
 pytest-docker-compose==3.2.0
-python-dotenv==0.13.0
+python-dotenv==0.14.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
 pytype==2020.8.28
@@ -118,15 +111,12 @@ texttable==1.6.3
 toml==0.10.1
 tomlkit==0.7.0
 typed-ast==1.4.1
-typing-extensions==3.7.4.3; python_version < "3.8"
 urllib3==1.25.10
 watchdog==0.10.3
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==0.57.0
-werkzeug==1.0.1
 wrapt==1.12.1
 yarl==1.5.1
 yaspin==1.0.0
-youtube-dl==2020.9.6
-zipp==3.1.0; python_version < "3.8"
+youtube-dl==2020.9.14
