--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ bump2version = "^1.0.0"
 pylint = "^2.6.0"
 pytype = "^2020.8.28"
 Pygments = "^2.7.0"
+mypy = "^0.782"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
