--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -68,6 +68,8 @@ mistune==0.8.4
 more-itertools==8.5.0
 multidict==4.7.6
 mutagen==1.45.1
+mypy==0.782
+mypy-extensions==0.4.3
 networkx==2.5
 ninja==1.10.0.post2
 packaging==20.4
@@ -111,6 +113,7 @@ texttable==1.6.3
 toml==0.10.1
 tomlkit==0.7.0
 typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.25.10
 watchdog==0.10.3
 wcwidth==0.2.5
