--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,7 +20,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.3.1
+click-skeleton==0.3.3
 colorama==0.4.3
 colorlog==4.2.1
 coverage==5.3
@@ -85,7 +85,7 @@ py==1.9.0
 pyacoustid==1.2.0
 pycparser==2.20
 pydub==0.24.1
-pygments==2.7.0
+pygments==2.7.1
 pylint==2.6.0
 pynacl==1.4.0
 pyparsing==2.4.7
@@ -98,16 +98,17 @@ pytest-docker-compose==3.2.0
 python-dotenv==0.14.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
-pytype==2020.9.14
+pytype==2020.9.16
 pywin32==227; sys_platform == "win32"
 pyyaml==5.3.1
 requests==2.24.0
 restructuredtext-lint==1.3.1
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2; platform_python_implementation == "CPython" and python_version < "3.9"
+semver==2.10.2
 shellingham==1.3.2
 six==1.15.0
-spotipy==2.15.0
+spotipy==2.16.0
 text-unidecode==1.3
 texttable==1.6.3
 toml==0.10.1
