--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.3.1
+click-skeleton==0.3.3
 colorama==0.4.3
 colorlog==4.2.1
 enlighten==1.6.2
@@ -44,9 +44,10 @@ pytest-click==1.0.2
 python-slugify==4.0.1
 python-vlc==3.0.11115
 requests==2.24.0
+semver==2.10.2
 shellingham==1.3.2
 six==1.15.0
-spotipy==2.15.0
+spotipy==2.16.0
 text-unidecode==1.3
 toml==0.10.1
 urllib3==1.25.10
