--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.5.0
+current_version = 0.6.0
 commit = True
 tag = True
 
@@ -10,3 +10,7 @@ replace = version = "{new_version}"
 [bumpversion:file:musicbot/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:setup.py]
+search = version='{current_version}',
+replace = version='{new_version}',
