--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,7 +9,7 @@ audioread==2.1.8
 bcrypt==3.2.0
 blessed==1.17.10
 bump2version==1.0.0
-cached-property==1.5.1
+cached-property==1.5.2
 cerberus==1.3.2
 certifi==2020.6.20
 cffi==1.14.3
@@ -20,7 +20,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.4.2
+click-skeleton==0.5.1
 colorama==0.4.3
 colorlog==4.2.1
 coverage==5.3
@@ -48,13 +48,14 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
 enlighten==1.6.2
+flake8==3.8.3
 graphql-py==0.7.1
 html5lib==1.1
 humanfriendly==8.2
 idna==2.10
 importlab==0.5.1
 iniconfig==1.0.1
-isort==5.5.2
+isort==5.5.3
 jellyfish==0.8.2
 jinja2==2.11.2
 jinxed==1.0.1; platform_system == "Windows"
@@ -83,8 +84,10 @@ prompt-toolkit==3.0.7
 ptyprocess==0.6.0
 py==1.9.0
 pyacoustid==1.2.0
+pycodestyle==2.6.0
 pycparser==2.20
 pydub==0.24.1
+pyflakes==2.2.0
 pygments==2.7.1
 pylint==2.6.0
 pynacl==1.4.0
