use skeleton from click-skeleton and replace deprecated functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "musicbot"
-version = "0.7.1"
+version = "0.7.3"
 description = "Music swiss army knife"
 authors = ["Adrien Pensart <crunchengine@gmail.com>"]
 license = "MIT"
 readme = "README.rst"
 
 [tool.poetry.scripts]
-musicbot = 'musicbot.cli:main'
+musicbot = 'musicbot.main:main'
 
 [tool.poetry.dependencies]
 python = "<3.9,>=3.8"
@@ -30,7 +30,7 @@ enlighten = "^1.6.1"
 attrs = "^20.1.0"
 requests = "^2.24.0"
 jellyfish = "^0.8.2"
-click-skeleton = "^0.5.1"
+click-skeleton = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
