--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 ansicon==1.89.0; platform_system == "Windows"
 atomicwrites==1.4.0; sys_platform == "win32"
-attrdict==2.0.1
 attrs==20.2.0
 audioread==2.1.8
 blessed==1.17.10
@@ -12,7 +11,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.7.0
+click-skeleton==0.7.1
 colorama==0.4.3
 colorlog==4.2.1
 enlighten==1.6.2
@@ -41,6 +40,7 @@ pyreadline==2.1; sys_platform == "win32"
 pyrsistent==0.17.2
 pytest==6.0.2
 pytest-click==1.0.2
+python-box==5.1.1
 python-slugify==4.0.1
 python-vlc==3.0.11115
 requests==2.24.0
