--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 aiohttp==3.6.2
-ansicon==1.89.0; platform_system == "Windows"
+ansicon==1.89.0
 astroid==2.4.2
 async-timeout==3.0.1
-atomicwrites==1.4.0; sys_platform == "win32"
+atomicwrites==1.4.0
 attrs==20.2.0
 audioread==2.1.8
 bcrypt==3.2.0
@@ -19,7 +19,7 @@ click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
 click-option-group==0.5.1
-click-skeleton==0.7.1
+click-skeleton==0.7.6
 colorama==0.4.3
 colorlog==4.2.1
 coverage==5.3
@@ -42,7 +42,7 @@ dephell-venvs==0.1.17
 dephell-versioning==0.1.2
 distro==1.5.0
 docker==4.3.1
-docker-compose==1.27.3
+docker-compose==1.27.4
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.16
@@ -57,7 +57,7 @@ iniconfig==1.0.1
 isort==5.5.3
 jellyfish==0.8.2
 jinja2==2.11.2
-jinxed==1.0.1; platform_system == "Windows"
+jinxed==1.0.1
 jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 logging-tree==1.8.1
@@ -67,6 +67,7 @@ mccabe==0.6.1
 mistune==0.8.4
 more-itertools==8.5.0
 multidict==4.7.6
+munch==2.5.0
 mutagen==1.45.1
 mypy==0.782
 mypy-extensions==0.4.3
@@ -91,23 +92,22 @@ pygments==2.7.1
 pylint==2.6.0
 pynacl==1.4.0
 pyparsing==2.4.7
-pyreadline==2.1; sys_platform == "win32"
+pyreadline==2.1
 pyrsistent==0.17.2
 pytest==6.0.2
 pytest-click==1.0.2
 pytest-cov==2.10.1
 pytest-docker-compose==3.2.0
-python-box==5.1.1
 python-dotenv==0.14.0
 python-slugify==4.0.1
 python-vlc==3.0.11115
 pytype==2020.9.16
-pywin32==227; sys_platform == "win32"
+pywin32==227
 pyyaml==5.3.1
 requests==2.24.0
 restructuredtext-lint==1.3.1
 ruamel.yaml==0.16.12
-ruamel.yaml.clib==0.2.2; platform_python_implementation == "CPython" and python_version < "3.9"
+ruamel.yaml.clib==0.2.2
 semver==2.10.2
 shellingham==1.3.2
 six==1.15.0
@@ -124,6 +124,6 @@ wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==0.57.0
 wrapt==1.12.1
-yarl==1.5.1
+yarl==1.6.0
 yaspin==1.0.0
 youtube-dl==2020.9.20
