--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.rst"
 
 [tool.poetry.scripts]
 musicbot = 'musicbot.main:main'
+musicbot-fire = 'musicbot.main:main_fire'
 
 [tool.poetry.dependencies]
 python = "<3.9,>=3.8"
-pyrsistent = "0.17.2"
 logging-tree = "^1.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
@@ -21,7 +21,6 @@ prompt_toolkit = "^3.0.2"
 watchdog = "^0.10.0"
 youtube-dl = "^2020.1.24"
 spotipy = "^2.10.0"
-humanfriendly = "^8.1"
 python-slugify = "^4.0.0"
 mutagen = "^1.44.0"
 pydub = "^0.24.0"
@@ -31,12 +30,12 @@ attrs = "^20.1.0"
 requests = "^2.24.0"
 jellyfish = "^0.8.2"
 click-skeleton = "^0.7.1"
+humanize = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
 coverage-badge = "^1.0"
 pytest-docker-compose = "^3.1.2"
-html5lib = "^1.0.1"
 dephell = "^0.8.3"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
