--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ flake8 = "^3.8.3"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov-report term-missing --durations=0 --cov musicbot --docker-compose-no-build -v -x --use-running-containers "
+addopts = "--cov-report term-missing --durations=0 --cov musicbot --docker-compose-no-build -x --use-running-containers "
 
 [tool.pylint.master]
 jobs = 4
