--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,53 @@
 ansicon==1.89.0
-atomicwrites==1.4.0
-attrs==20.2.0
+atomicwrites==1.4.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+attrs==20.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 audioread==2.1.8
 blessed==1.17.10
 certifi==2020.6.20
 chardet==3.0.4
-click==7.1.2
+click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 click-aliases==1.0.1
 click-completion==0.5.2
 click-didyoumean==0.0.3
 click-help-colors==0.8
-click-option-group==0.5.1
-click-skeleton==0.8.0
-colorama==0.4.3
+click-option-group==0.5.1; python_version >= "3.6" and python_version < "4"
+click-skeleton==0.8.1; python_version >= "3.6" and python_version < "3.9"
+colorama==0.4.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 colorlog==4.2.1
 enlighten==1.6.2
 graphql-py==0.7.1
-humanize==2.6.0
-idna==2.10
+humanize==2.6.0; python_version >= "3.5"
+idna==2.10; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 iniconfig==1.0.1
-jellyfish==0.8.2
-jinja2==2.11.2
+jellyfish==0.8.2; python_version > "3.4"
+jinja2==2.11.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 jinxed==1.0.1
 logging-tree==1.8.1
-markupsafe==1.1.1
+markupsafe==1.1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 munch==2.5.0
-mutagen==1.45.1
-packaging==20.4
+mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
+packaging==20.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 pathtools==0.1.2
-pluggy==0.13.1
+pluggy==0.13.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 ply==3.11
 prettytable==0.7.2
-prompt-toolkit==3.0.7
-py==1.9.0
+prompt-toolkit==3.0.7; python_full_version >= "3.6.1"
+py==1.9.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 pyacoustid==1.2.0
 pydub==0.24.1
-pyparsing==2.4.7
-pytest==6.1.0
+pyparsing==2.4.7; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
+pytest==6.1.0; python_version >= "3.5"
 pytest-click==1.0.2
-python-slugify==4.0.1
+python-slugify==4.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 python-vlc==3.0.11115
-requests==2.24.0
-semver==2.10.2
-shellingham==1.3.2
-six==1.15.0
+requests==2.24.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+semver==2.10.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+shellingham==1.3.2; python_version >= "2.6" and python_version < "3.0" or python_version > "3.0" and python_version < "3.1" or python_version > "3.1" and python_version < "3.2" or python_version > "3.2" and python_version < "3.3" or python_version > "3.3"
+six==1.15.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 spotipy==2.16.0
 text-unidecode==1.3
 toml==0.10.1
-urllib3==1.25.10
+urllib3==1.25.10; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 watchdog==0.10.3
 wcwidth==0.2.5
 youtube-dl==2020.9.20
