--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,125 +1,30 @@
-aiohttp==3.6.2
-ansicon==1.89.0
-astroid==2.4.2
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==20.2.0
-audioread==2.1.8
-bcrypt==3.2.0
-blessed==1.17.10
-bump2version==1.0.0
-cached-property==1.5.2
-cerberus==1.3.2
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.2
-click-aliases==1.0.1
-click-completion==0.5.2
-click-didyoumean==0.0.3
-click-help-colors==0.8
-click-option-group==0.5.1
-click-skeleton==0.8.2
-colorama==0.4.3
-colorlog==4.2.1
-coverage==5.3
-coverage-badge==1.0.1
-cryptography==3.1.1
-decorator==4.4.2
-dephell==0.8.3
-dephell-archive==0.1.7
-dephell-argparse==0.1.3
-dephell-changelogs==0.0.1
-dephell-discover==0.2.10
-dephell-licenses==0.1.7
-dephell-links==0.1.5
-dephell-markers==1.0.3
-dephell-pythons==0.1.15
-dephell-setuptools==0.2.4
-dephell-shells==0.1.5
-dephell-specifier==0.2.2
-dephell-venvs==0.1.17
-dephell-versioning==0.1.2
-distro==1.5.0
-docker==4.3.1
-docker-compose==1.27.4
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.16
-enlighten==1.6.2
-flake8==3.8.4
-graphql-py==0.7.1
-humanize==2.6.0
-idna==2.10
-importlab==0.5.1
-iniconfig==1.0.1
-isort==5.5.4
-jellyfish==0.8.2
-jinja2==2.11.2
-jinxed==1.0.1
-jsonschema==3.2.0
-lazy-object-proxy==1.4.3
-logging-tree==1.8.1
-m2r==0.2.1
-markupsafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-multidict==4.7.6
-munch==2.5.0
-mutagen==1.45.1
-mypy==0.782
-mypy-extensions==0.4.3
-networkx==2.5
-ninja==1.10.0.post2
-packaging==20.4
-paramiko==2.7.2
-pathtools==0.1.2
-pexpect==4.8.0
-pluggy==0.13.1
-ply==3.11
-prettytable==0.7.2
-prompt-toolkit==3.0.7
-ptyprocess==0.6.0
-py==1.9.0
-pyacoustid==1.2.0
-pycodestyle==2.6.0
-pycparser==2.20
-pydub==0.24.1
-pyflakes==2.2.0
-pygments==2.7.1
-pylint==2.6.0
-pynacl==1.4.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-pytest==6.1.0
-pytest-click==1.0.2
-pytest-cov==2.10.1
-pytest-docker-compose==3.1.2
-python-dotenv==0.14.0
-python-slugify==4.0.1
-python-vlc==3.0.11115
-pytype==2020.9.29
-pywin32==227
-pyyaml==5.3.1
-requests==2.24.0
-restructuredtext-lint==1.3.1
-ruamel.yaml==0.16.12
-ruamel.yaml.clib==0.2.2
-semver==2.10.2
-shellingham==1.3.2
-six==1.15.0
-spotipy==2.16.0
-text-unidecode==1.3
-texttable==1.6.3
-toml==0.10.1
-tomlkit==0.7.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3==1.25.10
-watchdog==0.10.3
-wcwidth==0.2.5
-websocket-client==0.57.0
-wrapt==1.12.1
-yarl==1.6.0
-yaspin==1.0.0
-youtube-dl==2020.9.20
+attrs==20.*,>=20.1.0
+bump2version==1.*,>=1.0.0
+click-skeleton==0.*,>=0.8.0
+colorlog==4.*,>=4.1.0
+coverage-badge==1.*,>=1.0.0
+dephell==0.*,>=0.8.3
+enlighten==1.*,>=1.6.1
+flake8==3.*,>=3.8.3
+graphql-py==0.*,>=0.7.1
+humanize==2.*,>=2.6.0
+jellyfish==0.*,>=0.8.2
+logging-tree==1.*,>=1.8.0
+mutagen==1.*,>=1.44.0
+mypy==0.*,>=0.782.0
+prettytable==0.*,>=0.7.2
+prompt-toolkit==3.*,>=3.0.2
+pyacoustid==1.*,>=1.1.0
+pydub==0.*,>=0.24.0
+pygments==2.*,>=2.7.0
+pylint==2.*,>=2.6.0
+pytest-cov==2.*,>=2.6.0
+pytest-docker-compose==3.*,>=3.1.2
+python-slugify==4.*,>=4.0.0
+python-vlc==3.*,>=3.0.0
+pytype==2020.*,>=2020.8.28
+requests==2.*,>=2.24.0
+restructuredtext-lint==1.*,>=1.3.0
+spotipy==2.*,>=2.10.0
+watchdog==0.*,>=0.10.0
+youtube-dl==2020.*,>=2020.1.24
