--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,10 +56,14 @@ disable = """
 disable=too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-few-public-methods,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation
 """
 
-[tool.dephell.main]
+[tool.dephell.main-setup]
 from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "setuppy", path = "setup.py"}
 
-[tool.dephell.dev]
+[tool.dephell.main-dependencies]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "pip", path = "requirements.txt"}
+
+[tool.dephell.dev-dependencies]
 from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "pip", path = "requirements-dev.txt"}
