progressbar2 instead of enlighten

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,13 @@ python-slugify = "^4.0.0"
 mutagen = "^1.44.0"
 pydub = "^0.24.0"
 colorlog = "^4.1.0"
-enlighten = "^1.6.1"
 attrs = "^20.1.0"
 requests = "^2.24.0"
 jellyfish = "^0.8.2"
 humanize = "^2.6.0"
 click-skeleton = "^0.8.0"
 spotipy = "^2.16.0"
+progressbar2 = "^3.53.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
