--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,6 @@ click-skeleton==0.*,>=0.8.0
 colorlog==4.*,>=4.1.0
 coverage-badge==1.*,>=1.0.0
 dephell==0.*,>=0.8.3
-enlighten==1.*,>=1.6.1
 flake8==3.*,>=3.8.3
 graphql-py==0.*,>=0.7.1
 humanize==2.*,>=2.6.0
@@ -13,6 +12,7 @@ logging-tree==1.*,>=1.8.0
 mutagen==1.*,>=1.44.0
 mypy==0.*,>=0.782.0
 prettytable==0.*,>=0.7.2
+progressbar2==3.*,>=3.53.1
 prompt-toolkit==3.*,>=3.0.2
 pyacoustid==1.*,>=1.1.0
 pydub==0.*,>=0.24.0
@@ -25,6 +25,6 @@ python-vlc==3.*,>=3.0.0
 pytype==2020.*,>=2020.8.28
 requests==2.*,>=2.24.0
 restructuredtext-lint==1.*,>=1.3.0
-spotipy==2.*,>=2.10.0
+spotipy==2.*,>=2.16.0
 watchdog==0.*,>=0.10.0
 youtube-dl==2020.*,>=2020.1.24
