--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 attrs==20.*,>=20.1.0
 click-skeleton==0.*,>=0.8.0
 colorlog==4.*,>=4.1.0
-enlighten==1.*,>=1.6.1
 graphql-py==0.*,>=0.7.1
 humanize==2.*,>=2.6.0
 jellyfish==0.*,>=0.8.2
 logging-tree==1.*,>=1.8.0
 mutagen==1.*,>=1.44.0
 prettytable==0.*,>=0.7.2
+progressbar2==3.*,>=3.53.1
 prompt-toolkit==3.*,>=3.0.2
 pyacoustid==1.*,>=1.1.0
 pydub==0.*,>=0.24.0
 python-slugify==4.*,>=4.0.0
 python-vlc==3.*,>=3.0.0
 requests==2.*,>=2.24.0
-spotipy==2.*,>=2.10.0
+spotipy==2.*,>=2.16.0
 watchdog==0.*,>=0.10.0
 youtube-dl==2020.*,>=2020.1.24
