create auto download playlist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ mutagen = "^1.44.0"
 colorlog = "^4.1.0"
 attrs = "^20.1.0"
 requests = "^2.24.0"
-jellyfish = "^0.8.2"
 spotipy = "^2.16.0"
 progressbar2 = "^3.53.1"
 humanize = "^3.0.1"
@@ -31,6 +30,8 @@ youtube_dl = "^2021.3.3"
 watchdog = "^2.0.2"
 graphql-py = "^0.8.1"
 pydub = "^0.25.1"
+fuzzywuzzy = "^0.18.0"
+python-Levenshtein = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
