--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 attrs==20.*,>=20.1.0
 bump2version==1.*,>=1.0.0
 click-skeleton==0.*,>=0.12.0
-colorlog==4.*,>=4.1.0
+colorlog==5.*,>=5.0.1
 coverage-badge==1.*,>=1.0.0
 dephell==0.*,>=0.8.3
 flake8==3.*,>=3.8.3
@@ -20,6 +20,7 @@ pygments==2.*,>=2.7.0
 pylint==2.*,>=2.6.0
 pytest-cov==2.*,>=2.6.0
 pytest-docker-compose==3.*,>=3.1.2
+pytest-timeout==1.*,>=1.4.2
 python-levenshtein==0.*,>=0.12.2
 python-slugify==4.*,>=4.0.0
 python-vlc==3.*,>=3.0.0
