--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ types-requests = "^2.25.0"
 types-python-slugify = "^0.1.1"
 colorlog = "^6.4.1"
 click-skeleton = "^0.16"
+pgcli = "^3.2.0"
+psycopg2 = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
